infrastructure/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monipersonal
  labels:
    name: monipersonal
    environment: base
